--- a/layout.css
+++ b/layout.css
@@ -71,7 +71,7 @@ li a:hover:not(.active) {
     text-align: center;
 }
 
-.icon {
+.icon, img {
   border-radius: 50%;
   width: 200px;
   height: 200px;
