--- a/layout.css
+++ b/layout.css
@@ -103,6 +103,19 @@ label, input, select, textarea, button {
   background-color: #0AA2BA;
 }
 
+.media, img {
+  width: 140px;
+  height: 200px;
+  margin-bottom: 15px;
+  background-color: #0AA2BA;
+}
+
+.exploreList {
+  display: flex;
+  justify-content: flex-start;
+  gap: 15px;
+}
+
 .checked {
   color: goldenrod;
 }
