--- a/layout.css
+++ b/layout.css
@@ -88,6 +88,17 @@ label, input, select, textarea, button {
   font-family: georgia;
 }
 
+.btn-group .button {
+  background-color: #333;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
+}
+
 .content { /* Stacks child elements vertically */
     display: flex;
     flex-direction: column;
