--- a/layout.css
+++ b/layout.css
@@ -48,6 +48,10 @@ li a:hover:not(.active) {
   background-color: #0AA2BA;
 }
 
+.inactive {
+  background-color: #333;
+}
+
 h1 {
   text-align: center;
 }
@@ -88,14 +92,18 @@ label, input, select, textarea, button {
   font-family: georgia;
 }
 
-.btn-group .button {
-  background-color: #333;
+.btn-container {
+  display: flex;
+}
+
+.btn-group, .button {
   border: none;
   color: white;
+  display: flex;
+  margin: 0;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   cursor: pointer;
 }
 
