--- a/layout.css
+++ b/layout.css
@@ -52,8 +52,22 @@ li a:hover:not(.active) {
   background-color: #333;
 }
 
+hr {
+  border: 1px solid #333;
+}
+
 h1 {
   text-align: center;
+  font-size: 45px;
+}
+
+h2 {
+  text-align: center;
+}
+
+p {
+  text-align: center;
+  font-size: 18px;
 }
 
 .split-section {
