--- a/signup.css
+++ b/signup.css
@@ -9,22 +9,22 @@ html, body {
 }
 
 body {
-  background: linear-gradient(-45deg, #16647D, #06304F, #021533);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+    background: linear-gradient(45deg, #5BCEFA, #F5A9B8);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
 }
 
 @keyframes gradient {
-  0% {
-    background-position: 0% 100%;
+    0% {
+      background-position: 0% 100%;
+    }
+    50% {
+      background-position: 100% 0%;
+    }
+    100% {
+      background-position: 0% 100%;
+    }
   }
-  50% {
-    background-position: 100% 0%;
-  }
-  100% {
-    background-position: 0% 100%;
-  }
-}
 
 .background-container {
   position: absolute;
@@ -41,7 +41,7 @@ body {
 }
 
 h1, h5, label {
-    color: #f8f8f8;
+    color: #333333;
 }
 
 .split-section {
