Adds data format for the Profile page
*Added the section to display the number of movies watched by the users
*Added the section to display the amount of time spent watching movies by the users
*Added the section to display the number of books read by the users
*Added the section to display the number of pages read by the users

--- a/layout.css
+++ b/layout.css
@@ -81,12 +81,10 @@ p {
   align-items: center;
 }
 
-.left {
-  background: linear-gradient(to right, #a9a9a9, #f0f0f0);
-}
-
 .right {
-  background: linear-gradient(to right, #f0f0f0, #a9a9a9);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .mid-section {
