--- a/layout.css
+++ b/layout.css
@@ -53,6 +53,21 @@ li a:hover:not(.active) {
   background-color: #333;
 }
 
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
 hr {
   border: 1px solid #333;
 }
@@ -69,6 +84,10 @@ h2 {
 p {
   text-align: center;
   font-size: 18px;
+}
+
+div {
+  color: white;
 }
 
 .split-section {
@@ -143,6 +162,33 @@ label, input, select, textarea, button {
   text-align: center;
 }
 
+.carousel-container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.carousel-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  font-size: 2rem;
+  border: none;
+  cursor: pointer;
+  z-index: 1;
+  padding: 10px;
+}
+
+.carousel-arrow.left {
+  left: 10px;
+}
+
+.carousel-arrow.right {
+  right: 10px;
+}
+
 .row {
   display: flex;
 }
@@ -154,6 +200,7 @@ label, input, select, textarea, button {
 .homeList {
   display: flex;
   justify-content: space-around;
+  transition: transform 0.3s ease-in-out;
   gap: 15px;
   width: 100vw;
 }
