--- a/layout.css
+++ b/layout.css
@@ -26,11 +26,12 @@ ul {
 
 li {
   float: left;
-  border-right:1px solid #bbb;
+  border-right: 1px solid #bbb;
 }
 
 li:last-child {
   border-right: none;
+  border-left: 1px solid #bbb;
 }
 
 li a {
