--- a/layout.css
+++ b/layout.css
@@ -237,6 +237,18 @@ label, input, select, textarea, button {
   margin-bottom: 20px;
   background-color: #800020;
   text-align: center;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.media:hover {
+  cursor: pointer;
+}
+
+.media img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .carousel-container {
