Adds website logo to Login and Sign Up pages
*Created logo for the website
*Added logo image as a file
*Placed website logo in the login.html page
*Placed website logo in the signup.html page

--- a/signup.css
+++ b/signup.css
@@ -68,9 +68,8 @@ label, select, option, input, button {
     font-family: georgia;
 }
 
-.icon, img {
+.logo-image, img {
   border-radius: 50%;
   width: 200px;
   height: 200px;
-  background-color: #800020;
 }
