--- a/login.css
+++ b/login.css
@@ -68,9 +68,8 @@ label, input, button {
     font-family: georgia;
 }
 
-.icon, img {
+.logo-image, img {
   border-radius: 50%;
   width: 200px;
   height: 200px;
-  background-color: #800020;
 }
