--- a/layout.css
+++ b/layout.css
@@ -129,7 +129,7 @@ label, input, select, textarea, button {
   margin: auto;
   width: 35%;
   padding: 10px;
-  /* border: 3px solid #73AD21; */
+  /* border: 3px solid #800020; */
 }
 
 .btn-container {
