--- a/login.css
+++ b/login.css
@@ -12,6 +12,7 @@ body {
   background: linear-gradient(-45deg, #16647D, #06304F, #021533);
   background-size: 400% 400%;
   animation: gradient 15s ease infinite;
+  font-family: 'Playfair Display', serif;
 }
 
 @keyframes gradient {
@@ -42,6 +43,7 @@ body {
 
 h1, h5, label {
     color: #f8f8f8;
+    font-family: 'Playfair Display', serif;
 }
 
 .split-section {
@@ -65,7 +67,7 @@ h1, h5, label {
 }
 
 label, input, button {
-    font-family: georgia;
+    font-family: 'Playfair Display', serif;
 }
 
 .logo-image, img {
