--- a/signup.css
+++ b/signup.css
@@ -12,6 +12,7 @@ body {
     background: linear-gradient(45deg, #5BCEFA, #F5A9B8);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
+    font-family: 'Playfair Display', serif;
 }
 
 @keyframes gradient {
@@ -42,6 +43,7 @@ body {
 
 h1, h5, label {
     color: #333333;
+    font-family: 'Playfair Display', serif;
 }
 
 .split-section {
@@ -57,15 +59,15 @@ h1, h5, label {
 }
 
 .content { /* Stacks child elements vertically */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 label, select, option, input, button {
-    font-family: georgia;
+  font-family: 'Playfair Display', serif;
 }
 
 .logo-image, img {
