--- a/layout.css
+++ b/layout.css
@@ -226,6 +226,27 @@ label, input, select, textarea, button {
   cursor: pointer;
 }
 
+table {
+  width: 100%;
+  background-color: #333;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+table, th, td {
+  border: 1px solid white;
+}
+
+th, td {
+  padding: 8px;
+  text-align: left;
+  color: white;
+}
+
+th {
+  background-color: #800020;
+}
+
 /* Stacks child elements vertically */
 .content {
     display: flex;
