--- a/layout.css
+++ b/layout.css
@@ -74,13 +74,13 @@ hr {
   border: 1px solid #333;
 }
 
-h1 {
+h1, h2 {
   text-align: center;
-  font-size: 45px;
+  color: black;
 }
 
-h2 {
-  text-align: center;
+h1 {
+  font-size: 45px;
 }
 
 p {
@@ -126,6 +126,10 @@ textarea {
 
 label, input, select, textarea, button {
   font-family: 'Playfair Display', serif;
+}
+
+label {
+  color: black;
 }
 
 .center-explore {
